# autoencoding-probabilistic-circuits

./: .gitignore  LICENSE.md  PROJECT_NAME  README.md  pyproject.toml
apc/: early_stopping.py  embeddings_2d.py  enums.py  exp_utils.py  losses.py  main.py  pc_utils.py  test.py  test_downstream_task.py  train.py  utils.py
apc/models/: abstract_model.py  components.py  conv_pc.py  dae_1d.py  iterative_imputer.py  made.py  vector_quantizer.py
apc/models/autoencoder/: autoencoding_pc.py  hivae.py  miwae.py  vaem.py  vanilla_autoencoder.py  variational_autoencoder.py
conf/: config.yaml
conf/data/: 20newsgroup.yaml  adult.yaml  bank.yaml  base_1d.yaml  breast_cancer.yaml  celeba.yaml  cifar.yaml  covtype.yaml  credit.yaml  debd-accidents.yaml  debd-ad.yaml  debd-base.yaml  debd-baudio.yaml  debd-bbc.yaml  debd-bnetflix.yaml  debd-book.yaml  debd-c20ng.yaml  debd-cr52.yaml  debd-cwebkb.yaml  debd-dna.yaml  debd-jester.yaml  debd-kdd.yaml  debd-kosarek.yaml  debd-moviereview.yaml  debd-msnbc.yaml  debd-nltcs.yaml  debd-plants.yaml  debd-pumsb_star.yaml  debd-tmovie.yaml  debd-tretail.yaml  debd-voting.yaml  flowers.yaml  fmnist-32.yaml  kddcup99.yaml  lfw.yaml  lsun.yaml  mnist-1d.yaml  mnist-32-pad.yaml  mnist-32.yaml  mnist.yaml  (+3 more)
conf/model/: act-apc.yaml  act-pc.yaml  ae.yaml  apc.yaml  cat-apc.yaml  cat-pc.yaml  hivae.yaml  mice.yaml  missforest.yaml  miwae.yaml  vae.yaml  vaem.yaml
simple_einet/: data.py  einet.py  sampling_utils.py  tiny_imagenet.py  utils.py
simple_einet/layers/: factorized_leaf.py  linsum.py  mixing.py  sum.py
(+13 files in other folders)
